attempt to fix how parallax looks on small screen

--- a/source/parallax/parallax.css.scss
+++ b/source/parallax/parallax.css.scss
@@ -47,7 +47,7 @@ body{
     -webkit-animation-timing-function: linear;
     @media screen and(max-width: $break-pt){
     	top: -250px;
-			right: -250px;
+			right: -500px;
     }
       height: 450px;
 			width: 900px;
